    (todd)

    MAPREDUCE-6074. native-task: fix release audit, javadoc, javac warnings
    (todd)

    MAPREDUCE-6077. native-task: Remove CustomModule examples in nativetask (seanzhong)

    MAPREDUCE-6078. native-task: fix gtest build on macosx (Binglin Chang)

Release 2.8.0 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    MAPREDUCE-4653. TestRandomAlgorithm has an unused "import" statement.
    (Amir Sanjar via harsh)

    MAPREDUCE-6100. replace "mapreduce.job.credentials.binary" with
    MRJobConfig.MAPREDUCE_JOB_CREDENTIALS_BINARY for better readability.
    (Zhihai Xu via harsh)

    MAPREDUCE-6105. Inconsistent configuration in property
    mapreduce.reduce.shuffle.merge.percent. (Ray Chiang via harsh)

    MAPREDUCE-4414. Add main methods to JobConf and YarnConfiguration,
    for debug purposes. (Plamen Jeliazkov via harsh)

    MAPREDUCE-5755. MapTask.MapOutputBuffer#compare/swap should have
    @Override annotation. (ozawa)

  OPTIMIZATIONS

  BUG FIXES

Release 2.7.0 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

    MAPREDUCE-6227. DFSIO for truncate. (shv via yliu)

    MAPREDUCE-6228. Add truncate operation to SLive. (Plamen Jeliazkov via shv)

    MAPREDUCE-5583. Ability to limit running map and reduce tasks. 
    (Jason Lowe via junping_du)

  IMPROVEMENTS

    MAPREDUCE-6149. Document override log4j.properties in MR job.
    (Junping Du via harsh)

    MAPREDUCE-6194. Bubble up final exception in failures during creation
    of output collectors (Varun Saxena via harsh)

    MAPREDUCE-5420. Remove mapreduce.task.tmp.dir from mapred-default.xml
    (James Carman via harsh)

    MAPREDUCE-5932. Provide an option to use a dedicated reduce-side shuffle
    log (Gera Shegalov via jlowe)

    MAPREDUCE-6046. Change the class name for logs in RMCommunicator
    (Sahil Takiar via devaraj)

    HADOOP-11032. Replace use of Guava's Stopwatch with Hadoop's StopWatch
    (ozawa)
