@@ -341,24 +341,6 @@ name|PARTITION_FILENAME
 init|=
 literal|"_partition.lst"
 decl_stmt|;
-DECL|field|NUM_PARTITIONS
-specifier|private
-specifier|static
-specifier|final
-name|String
-name|NUM_PARTITIONS
-init|=
-literal|"mapreduce.terasort.num.partitions"
-decl_stmt|;
-DECL|field|SAMPLE_SIZE
-specifier|private
-specifier|static
-specifier|final
-name|String
-name|SAMPLE_SIZE
-init|=
-literal|"mapreduce.terasort.partitions.sample"
-decl_stmt|;
 DECL|field|KEY_LENGTH
 specifier|static
 specifier|final
@@ -747,9 +729,16 @@ name|conf
 operator|.
 name|getLong
 argument_list|(
+name|TeraSortConfigKeys
+operator|.
 name|SAMPLE_SIZE
+operator|.
+name|key
+argument_list|()
 argument_list|,
-literal|100000
+name|TeraSortConfigKeys
+operator|.
+name|DEFAULT_SAMPLE_SIZE
 argument_list|)
 decl_stmt|;
 specifier|final
@@ -802,9 +791,16 @@ name|conf
 operator|.
 name|getInt
 argument_list|(
+name|TeraSortConfigKeys
+operator|.
 name|NUM_PARTITIONS
+operator|.
+name|key
+argument_list|()
 argument_list|,
-literal|10
+name|TeraSortConfigKeys
+operator|.
+name|DEFAULT_NUM_PARTITIONS
 argument_list|)
 argument_list|,
 name|splits
@@ -1740,11 +1736,16 @@ argument_list|()
 operator|.
 name|getBoolean
 argument_list|(
-name|TeraScheduler
+name|TeraSortConfigKeys
 operator|.
-name|USE
+name|USE_TERA_SCHEDULER
+operator|.
+name|key
+argument_list|()
 argument_list|,
-literal|true
+name|TeraSortConfigKeys
+operator|.
+name|DEFAULT_USE_TERA_SCHEDULER
 argument_list|)
 condition|)
 block|{
