@@ -265,14 +265,6 @@ argument_list|,
 name|Text
 argument_list|>
 block|{
-DECL|field|FINAL_SYNC_ATTRIBUTE
-specifier|static
-specifier|final
-name|String
-name|FINAL_SYNC_ATTRIBUTE
-init|=
-literal|"mapreduce.terasort.final.sync"
-decl_stmt|;
 DECL|field|committer
 specifier|private
 name|OutputCommitter
@@ -300,7 +292,12 @@ argument_list|()
 operator|.
 name|setBoolean
 argument_list|(
+name|TeraSortConfigKeys
+operator|.
 name|FINAL_SYNC_ATTRIBUTE
+operator|.
+name|key
+argument_list|()
 argument_list|,
 name|newValue
 argument_list|)
@@ -325,9 +322,16 @@ argument_list|()
 operator|.
 name|getBoolean
 argument_list|(
+name|TeraSortConfigKeys
+operator|.
 name|FINAL_SYNC_ATTRIBUTE
+operator|.
+name|key
+argument_list|()
 argument_list|,
-literal|false
+name|TeraSortConfigKeys
+operator|.
+name|DEFAULT_FINAL_SYNC_ATTRIBUTE
 argument_list|)
 return|;
 block|}
