@@ -302,20 +302,6 @@ operator|.
 name|class
 argument_list|)
 decl_stmt|;
-DECL|field|SIMPLE_PARTITIONER
-specifier|static
-name|String
-name|SIMPLE_PARTITIONER
-init|=
-literal|"mapreduce.terasort.simplepartitioner"
-decl_stmt|;
-DECL|field|OUTPUT_REPLICATION
-specifier|static
-name|String
-name|OUTPUT_REPLICATION
-init|=
-literal|"mapreduce.terasort.output.replication"
-decl_stmt|;
 comment|/**    * A partitioner that splits text keys into roughly equal partitions    * in a global sorted order.    */
 DECL|class|TotalOrderPartitioner
 specifier|static
@@ -1431,9 +1417,16 @@ argument_list|()
 operator|.
 name|getBoolean
 argument_list|(
-name|SIMPLE_PARTITIONER
+name|TeraSortConfigKeys
+operator|.
+name|USE_SIMPLE_PARTITIONER
+operator|.
+name|key
+argument_list|()
 argument_list|,
-literal|false
+name|TeraSortConfigKeys
+operator|.
+name|DEFAULT_USE_SIMPLE_PARTITIONER
 argument_list|)
 return|;
 block|}
@@ -1457,7 +1450,12 @@ argument_list|()
 operator|.
 name|setBoolean
 argument_list|(
-name|SIMPLE_PARTITIONER
+name|TeraSortConfigKeys
+operator|.
+name|USE_SIMPLE_PARTITIONER
+operator|.
+name|key
+argument_list|()
 argument_list|,
 name|value
 argument_list|)
@@ -1481,9 +1479,16 @@ argument_list|()
 operator|.
 name|getInt
 argument_list|(
+name|TeraSortConfigKeys
+operator|.
 name|OUTPUT_REPLICATION
+operator|.
+name|key
+argument_list|()
 argument_list|,
-literal|1
+name|TeraSortConfigKeys
+operator|.
+name|DEFAULT_OUTPUT_REPLICATION
 argument_list|)
 return|;
 block|}
@@ -1507,11 +1512,68 @@ argument_list|()
 operator|.
 name|setInt
 argument_list|(
+name|TeraSortConfigKeys
+operator|.
 name|OUTPUT_REPLICATION
+operator|.
+name|key
+argument_list|()
 argument_list|,
 name|value
 argument_list|)
 expr_stmt|;
+block|}
+DECL|method|usage ()
+specifier|private
+specifier|static
+name|void
+name|usage
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|System
+operator|.
+name|err
+operator|.
+name|println
+argument_list|(
+literal|"Usage: terasort [-Dproperty=value]<in><out>"
+argument_list|)
+expr_stmt|;
+name|System
+operator|.
+name|err
+operator|.
+name|println
+argument_list|(
+literal|"TeraSort configurations are:"
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|TeraSortConfigKeys
+name|teraSortConfigKeys
+range|:
+name|TeraSortConfigKeys
+operator|.
+name|values
+argument_list|()
+control|)
+block|{
+name|System
+operator|.
+name|err
+operator|.
+name|println
+argument_list|(
+name|teraSortConfigKeys
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 DECL|method|run (String[] args)
 specifier|public
@@ -1525,6 +1587,22 @@ parameter_list|)
 throws|throws
 name|Exception
 block|{
+if|if
+condition|(
+name|args
+operator|.
+name|length
+operator|!=
+literal|2
+condition|)
+block|{
+name|usage
+argument_list|()
+expr_stmt|;
+return|return
+literal|2
+return|;
+block|}
 name|LOG
 operator|.
 name|info
