@@ -548,6 +548,39 @@ name|TERA_OUTPUT_PATH
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|testTeraSortWithLessThanTwoArgs ()
+specifier|public
+name|void
+name|testTeraSortWithLessThanTwoArgs
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|String
+index|[]
+name|args
+init|=
+operator|new
+name|String
+index|[
+literal|1
+index|]
+decl_stmt|;
+name|assertEquals
+argument_list|(
+operator|new
+name|TeraSort
+argument_list|()
+operator|.
+name|run
+argument_list|(
+name|args
+argument_list|)
+argument_list|,
+literal|2
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 end_class
 
