@@ -253,6 +253,8 @@ Release 2.8.0 - UNRELEASED
 
   IMPROVEMENTS
 
+    MAPREDUCE-5807. Print usage by TeraSort job. (Rohith via harsh)
+
     MAPREDUCE-4653. TestRandomAlgorithm has an unused "import" statement.
     (Amir Sanjar via harsh)
 
